...
                    android:padding="11dp"
                    android:src="@drawable/ic_settings_action_back"
                    app:tint="@color/launcher_primary_dark" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/settings_page_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/settings_title"
                android:textColor="@color/launcher_text_primary"
                android:textSize="22sp"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/bg_settings_group_divider"
                android:orientation="vertical"
                android:showDividers="middle">

                <include android:id="@+id/btn_detail_contacts" layout="@layout/item_settings_standard_navigation" />
                <include android:id="@+id/btn_detail_calls" layout="@layout/item_settings_standard_navigation" />
                <include android:id="@+id/btn_detail_diagnostics" layout="@layout/item_settings_standard_navigation" />
                <include android:id="@+id/btn_detail_safety" layout="@layout/item_settings_standard_navigation" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

...
