...
                    android:padding="10dp"
                    android:src="@drawable/ic_settings_action_back"
                    app:tint="@color/launcher_primary_dark" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/settings_detail_page_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/launcher_text_primary"
                android:textSize="22sp"
                android:textStyle="bold" />
...
