...
                    android:layout_marginTop="3dp"
                    android:text="@string/settings_elder_subtitle"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/btn_switch_standard"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_background"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
...
